--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>WELCOME TO </h1>
-    <h1> <span class="orange">SHAILA TASNIM'S</span>  WORLD</h1>
-    <h3>Build Climber and Train Stopper</h3>
-    <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
-    <img src="images/pic2.png" alt="">
+
+   <section>
+       <div class="half-width"> 
+        <h1>WELCOME TO </h1>
+        <h1> <span class="orange">SHAILA TASNIM'S</span>  WORLD</h1>
+        <h3>Build Climber and Train Stopper</h3>
+        <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+        <a class="link-button" target="_blank" href="https://github.com/shikha1876/developer-portfolio-new">HIRE ME</a>
+       </div>
+
+       <div class="half-width"> <img src="images/pic2.png" alt=""></div>
+   </section>
 </body>
 </html>
