--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-   <section>
+   <section class="top-banner">
        <div class="half-width"> 
         <h1>WELCOME TO </h1>
         <h1> <span class="orange">SHAILA TASNIM'S</span>  WORLD</h1>
