--- a/index.html
+++ b/index.html
@@ -23,5 +23,19 @@
 
        <div class="half-width"> <img src="images/pic2.png" alt=""></div>
    </section>
+   <section class="dream-section">
+    <div class="half-width">
+        <img src="images/pic1.png" alt="">
+
+    </div>
+    <div class="half-width">
+        <h2>Dream Big</h2>
+        <h3>Become a web developer</h3>
+        <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+        <a class="download-button" target="_blank" href="https://github.com/shikha1876/developer-portfolio-new">DOWNLOAD RESUME</a>
+
+    </div>
+
+   </section>
 </body>
 </html>
