--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-   <section class="top-banner">
+   <section class="top-banner flexible-section">
        <div class="half-width"> 
         <h1>WELCOME TO </h1>
         <h1> <span class="orange">SHAILA TASNIM'S</span>  WORLD</h1>
@@ -23,7 +23,7 @@
 
        <div class="half-width"> <img src="images/pic2.png" alt=""></div>
    </section>
-   <section class="dream-section">
+   <section class="dream-section flexible-section">
     <div class="half-width">
         <img src="images/pic1.png" alt="">
 
@@ -36,6 +36,23 @@
 
     </div>
 
+   </section>
+   <section class="experience-section">
+        <h2>Experiences</h2>
+        <div class="flexible-section">
+            <div class="half-width">
+                <h2>Full Stack Web Developer</h2>
+                <h3>2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="half-width">
+                <h2>Baby Web Developer</h2>
+                <h3>2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+    
+                </p>
+            </div>
+        </div>
    </section>
 </body>
 </html>
