--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
    </section>
    <section class="experience-section">
         <h2>Experiences</h2>
-        <div class="flexible-section">
-            <div class="experience-item">
+        <div class="flexible-section"  >
+            <div class="experience-item" id="orange-border">
                 <h2>Full Stack Web Developer</h2>
                 <h3 class="orange">2021-Present | Pro Level Developer</h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
-            <div class="experience-item">
+            <div class="experience-item" id="blue-border" >
                 <h2>Baby Web Developer</h2>
                 <h3 class="orange">2020-2021 | Programming Hero Learner</h3>
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
@@ -55,4 +55,5 @@
         </div>
    </section>
 </body>
+<footer style="text-align: center; color:grey">© Peter Parker 2023, a Programming Hero initiative.</footer>
 </html>
